# mint-reporting-app

./: .gitignore  CLAUDE.md  README.md  SPEC.md  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/database/: connection.rs  migrations.rs  mod.rs  queries.rs
backend/src/handlers/: analytics.rs  dashboard.rs  data.rs  mod.rs  system.rs  websocket.rs
backend/src/middleware/: cors.rs  logging.rs  mod.rs  validation.rs
backend/src/models/: dashboard.rs  data_source.rs  mod.rs  query.rs
backend/src/services/: analytics.rs  duckdb.rs  file_processor.rs  mod.rs
backend/src/utils/: config.rs  error.rs
desktop/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json  file-access.json
desktop/src-tauri/src/: lib.rs  main.rs
docker/: default.conf  docker-compose.yml  nginx.Dockerfile  nginx.conf  web.Dockerfile
shared/types/: api.ts  dashboard.ts  data.ts
shared/utils/: constants.ts  validation.ts
web-frontend/: .eslintrc.json  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web-frontend/src/: App.tsx
web-frontend/src/components/Common/: ErrorFallback.tsx  Layout.tsx  LoadingSpinner.tsx  Navbar.tsx
web-frontend/src/components/Dashboard/: AGChartsPanel.tsx  AGDataGrid.tsx  FilterPanel.tsx  MetricsCards.tsx
web-frontend/src/pages/: Analytics.tsx  Dashboard.tsx  DataSources.tsx  Settings.tsx
