[package]
name = "duckdb-dashboard-backend"
version = "1.0.0"
edition = "2021"
description = "Shared Rust backend for DuckDB dashboard application"

[[bin]]
name = "web-server"
path = "src/main.rs"

[lib]
name = "duckdb_dashboard_backend"
path = "src/lib.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression", "trace", "fs"] }

# Database
duckdb = { version = "0.10", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket support
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Configuration and CLI
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File handling
bytes = "1.5"
mime = "0.3"

[target.'cfg(target_family = "wasm")'.dependencies]
# WASM-specific dependencies if needed

[dev-dependencies]
# Testing dependencies
tokio-test = "0.4"

[features]
default = []
desktop = []
web = []