[package]
name = "duckdb-dashboard-desktop"
version = "1.0.0"
description = "DuckDB Dashboard Desktop Application"
authors = ["DuckDB Dashboard Team"]
license = "MIT"
repository = "https://github.com/your-username/duckdb-dashboard"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri dependencies
tauri = { version = "2.0", features = ["macos-private-api"] }

# Tauri plugins
tauri-plugin-window-state = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-autostart = "2.0"

# Shared backend dependencies (inline instead of circular dependency)
duckdb = { version = "1.0", features = ["bundled"] }
axum = { version = "0.7", features = ["ws", "multipart"] }

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Additional desktop features
dirs = "5.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
